versioned_docs/version-23.1/reference/rpk/rpk-plugin/rpk-plugin-install.mdx
---
title: rpk plugin install
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk plugin install | Redpanda Docs" />
  <meta name="description" content="rpk plugin install" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-plugin/rpk-plugin-install/" />
</head>

Install an `rpk` plugin.

An `rpk` plugin must be saved in `$HOME/.local/bin` or in a directory that is in
your `$PATH`. By default, this command installs plugins to `$HOME/.local/bin`. This
can be overridden by specifying the `--dir` flag.

If `--dir` is not present, `rpk` will create `$HOME/.local/bin` if it does not exist.

## Usage

```bash
rpk plugin install [PLUGIN] [flags]
```

## Aliases

```bash
install, download
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong> Value</strong>
      </td>
      <td>
        <strong> Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>--dir</td>
      <td>string</td>
      <td>
        Destination directory to save the installed plugin (default:
        `"$HOME/.local/bin"`).
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td> Help for install.</td>
    </tr>
    <tr>
      <td>-u, --update</td>
      <td>-</td>
      <td>
        Update a locally installed plugin if it differs from the current remote
        version.
      </td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>
        Enable verbose logging (default <code>false</code>).
      </td>
    </tr>
  </tbody>
</table>
